--- a/alacritty.yml
+++ b/alacritty.yml
@@ -110,6 +110,8 @@ font:
     #family: RobotoMono Nerd Font Mono
     #family: Fira Code #NOTE: Le legature non funzionano con alacritty
     family: Gemini Minimal #NOTE: Le legature non funzionano con alacritty
+    family: Source Code Pro
+    family: monospace
     # The `style` can be specified to pick a specific face.
     style: Regular
     #style: Light
