--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -268,6 +268,7 @@ font_size 13.0
 #: then this option is ignored.
 
 cursor_shape block
+shell_integration no-cursor
 
 #: The cursor shape can be one of block, beam, underline. Note that
 #: when reloading the config this will be changed only if the cursor
